# jk-webapi-new

./: .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
.github/workflows/: release.yml
skills/: SKILL.md
skills/references/: signature.md  store.md  tauri-backend.md  types.md  ui-page.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/lib/: signature.ts  store.ts  types.ts
