[package]
name = "internal-api-push-tool"
version = "0.1.0"
description = "Internal API Push Tool"
authors = ["you"]
edition = "2021"

[lib]
name = "internal_api_push_tool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-http = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
